Add util methods